--- a/src/app/pages/grocery-cart/grocery-cart.page.html
+++ b/src/app/pages/grocery-cart/grocery-cart.page.html
@@ -147,6 +147,7 @@
 </ion-content>
 <ion-footer>
     <ion-button class="otp_btn" (click)="paymentMethod()">
-        {{"grocery_cart.select_payment_method" | translate }}
+        {{"pay_method_page.continue_btn" | translate}}
+        <!-- {{"grocery_cart.select_payment_method" | translate }} -->
     </ion-button>
 </ion-footer>
