--- a/src/app/pages/grocery-category/grocery-category.page.html
+++ b/src/app/pages/grocery-category/grocery-category.page.html
@@ -7,7 +7,7 @@
     <ion-title color="light">Category</ion-title>
     <!-- <ion-buttons slot="end">
       <ion-button>
-        <ion-icon src="../../../assets/icon-image/cart_ic.svg">
+        <ion-icon src="./assets/icon-image/cart_ic.svg">
         </ion-icon>
       </ion-button>
 
