--- a/src/app/pages/grocery-home/grocery-home.page.html
+++ b/src/app/pages/grocery-home/grocery-home.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar mode="md">
     <ion-buttons slot="end">
       <ion-button>
-        <ion-icon src="../../../assets/icon-image/cart_ic.svg">
+        <ion-icon src="./assets/icon-image/cart_ic.svg">
         </ion-icon>
       </ion-button>
     </ion-buttons>
@@ -37,7 +37,7 @@
       <div class="btn_div">
         <div class="qty_div">
           <ion-button class="add_btn trans-btn">
-            <ion-icon src="../../../assets/icon-image/minus-sign.svg">
+            <ion-icon src="./assets/icon-image/minus-sign.svg">
 
             </ion-icon>
           </ion-button>
@@ -45,7 +45,7 @@
             0
           </p>
           <ion-button class="add_btn trans-btn">
-            <ion-icon src="../../../assets/icon-image/plus-signs.svg">
+            <ion-icon src="./assets/icon-image/plus-signs.svg">
 
             </ion-icon>
           </ion-button>
@@ -56,7 +56,7 @@
     </div>
   </div>
   <div class="offer_div">
-    <img src="../../../assets/image/maket_logo.png">
+    <img src="./assets/image/maket_logo.png">
     <div class="detail_div">
       <h3 class="discount">Upto $5.00 off</h3>
       <p class="text_lbl">Buy with Us</p>
@@ -80,13 +80,13 @@
         <p class="or_lbl">Groceries</p>
       </div>
       <p class="away_lbl">
-        <ion-icon src="../../../assets/icon-image/gro_pin.svg"></ion-icon>
+        <ion-icon src="./assets/icon-image/gro_pin.svg"></ion-icon>
         {{item?.away}}
       </p>
     </div>
   </div>
   <div class="money_offer">
-    <img src="../../../assets/image/doller_im.png">
+    <img src="./assets/image/doller_im.png">
     <div class="detail_div">
       <h3 class="discount">Get $50</h3>
       <p class="text_lbl">Invite your friends to shop
