--- a/src/app/pages/grocery-promocode/grocery-promocode.page.html
+++ b/src/app/pages/grocery-promocode/grocery-promocode.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   <div no-data *ngIf="data?.length == 0">
-    <img src="../../../assets/image/no-data-icon-10.jpg" alt="no data">
+    <img src="./assets/image/no-data-icon-10.jpg" alt="no data">
   </div>
   <div class="ion-margin-horizontal main_div">
 
