--- a/src/app/pages/pay-method/pay-method.page.html
+++ b/src/app/pages/pay-method/pay-method.page.html
@@ -34,14 +34,14 @@
     <div class="online" (click)="payment_type='RAZOR'"
       [ngStyle]="{'background-color':payment_type==='RAZOR'? 'var(--ion-color-green)': 'var(--ion-color-white)' }">
       <div class="img_div">
-        <img src="../../../assets/image/Razorpay_logo.svg" class="pay_img" />
+        <img src="./assets/image/Razorpay_logo.svg" class="pay_img" />
         <h3 [ngClass]="payment_type==='RAZOR' ? 'tittle' : 'cash_heading' ">{{"pay_method.razor_pay" | translate}}</h3>
       </div>
     </div>
     <div class="cash" (click)="payment_type='PAYPAL'"
       [ngStyle]="{'background-color':payment_type==='PAYPAL'? 'var(--ion-color-green)': 'var(--ion-color-white)' }">
       <div class="img_div">
-        <img src="../../../assets/image/paypal_image.png" class="pay_img paypal_img" />
+        <img src="./assets/image/paypal_image.png" class="pay_img paypal_img" />
         <h3 [ngClass]="payment_type==='PAYPAL' ? 'tittle' : 'cash_heading' ">{{"pay_method.PayPal" | translate}}</h3>
       </div>
     </div>
