--- a/src/app/pages/review/review.page.html
+++ b/src/app/pages/review/review.page.html
@@ -6,8 +6,8 @@
             </ion-buttons>
             <ion-buttons slot="end">
                 <ion-button fill="clear" mode="md" (click)="addBookmark()">
-                    <ion-icon class="bookmark-icon" *ngIf="!data?.favourite" src="../../../assets/icon-image/detail-icon.svg"></ion-icon>
-                    <ion-icon class="bookmark-icon" *ngIf="data?.favourite" src="../../../assets/icon-image/bookmark-icon.svg"></ion-icon>
+                    <ion-icon class="bookmark-icon" *ngIf="!data?.favourite" src="./assets/icon-image/detail-icon.svg"></ion-icon>
+                    <ion-icon class="bookmark-icon" *ngIf="data?.favourite" src="./assets/icon-image/bookmark-icon.svg"></ion-icon>
                 </ion-button>
             </ion-buttons>
         </ion-toolbar>
