--- a/src/app/pages/store/store.page.html
+++ b/src/app/pages/store/store.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar mode="md">
     <ion-buttons slot="start">
       <!-- <ion-button (click)="back()">
-        <ion-icon src="../../../assets/icon-image/close_b.svg">
+        <ion-icon src="./assets/icon-image/close_b.svg">
         </ion-icon>
       </ion-button> -->
       <ion-back-button color="light" defaultHref="home" icon="./assets/icon-image/close_b.svg" text=""></ion-back-button>
