--- a/src/app/pages/timeline/timeline.page.html
+++ b/src/app/pages/timeline/timeline.page.html
@@ -52,7 +52,7 @@
                 </p>
             </div>
             <ion-button class="accepted" shape="round">
-                <ion-icon src="../../../assets/icon-image/call.svg"></ion-icon>
+                <ion-icon src="./assets/icon-image/call.svg"></ion-icon>
                 <a href="tel: {{driver?.phone}}">{{driver?.phone}} </a>
             </ion-button>
         </ion-slide>
