--- a/src/app/pages/category-detail/category-detail.page.scss
+++ b/src/app/pages/category-detail/category-detail.page.scss
@@ -1,101 +1,131 @@
 ion-header {
+  background: #000;
+
   ion-toolbar {
+    --background: transparent;
+
     ion-title {
       font-family: "fivo-regular";
       text-transform: uppercase;
       padding: 0 80px 1px;
+      color: var(--ion-color-light);
     }
+
     ion-back-button {
-      color: var(--ion-color-green);
+      // color: var(--ion-color-green);
+      color: var(--ion-color-light);
     }
   }
+
   .search_div {
     margin: 0px 8px;
   }
 }
+
 ion-content {
+  --background: #000;
+
   .main_lbl {
     margin-top: 10px;
     font-size: 18px;
-    color: var(--light-black-color);
+    // color: var(--light-black-color);
+    color: var(--ion-color-light);
     font-family: "fivo-regular";
     padding: 0px 16px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .more_btn {
       font-size: 14px;
       text-transform: capitalize;
-      --color: var(--green-color);
+      // --color: var(--green-color);
+      --color: var(--ion-color-light);
       height: 20px;
     }
   }
+
   .trending_div {
     display: -webkit-box;
     overflow-x: auto;
     padding: 10px 0px 10px 16px;
+
     .product_div {
       width: 145px;
       border-radius: 5px;
       box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
       padding: 10px 7px;
       margin-right: 16px;
+
       .img_div {
         display: flex;
         justify-content: center;
         padding: 10px 0px 20px 0px;
+
         img {
           height: 80px;
           width: 80px;
         }
       }
+
       .name {
         font-size: 15px;
         font-family: "fivo-regular";
-        color: var(--ion-color-darkBlue);
+        // color: var(--ion-color-darkBlue);
+        color: var(--ion-color-light);
         margin: 0;
       }
+
       .qunty {
         font-size: 12px;
-        color: var(--border-color);
+        // color: var(--border-color);
+        color: var(--ion-color-light);
         font-family: "fivo-regular";
         margin: 4px 0px;
       }
+
       .price {
         font-size: 14px;
-        color: var(--green-color);
+        // color: var(--green-color);
+        color: var(--ion-color-light);
         font-family: "fivo-regular";
         margin: 0;
       }
     }
+
     .btn_div {
       display: flex;
       align-items: center;
       justify-content: space-between;
+
       .add_btn {
         height: 15px;
         width: 15px;
-        --background: var(--ion-color-darkBlue);
-        --background-activated: var(--ion-color-darkBlue);
+        --background: var(--ion-color-green);
+        --background-activated: var(--ion-color-green);
         // --border-radius: 2px;
         ion-icon {
           height: 9px;
           width: 9px;
         }
       }
+
       .qty_p {
         font-size: 14px;
-        color: var(--border-color);
+        // color: var(--border-color);
+        color: var(--ion-color-light);
         font-family: "fivo-regular";
         margin: 0 5px;
         padding-top: 2px;
       }
+
       .qty_div {
         display: flex;
         align-items: center;
       }
     }
   }
+
   .trending_div::-webkit-scrollbar {
     display: none;
   }
