--- a/src/app/pages/product/product.page.scss
+++ b/src/app/pages/product/product.page.scss
@@ -3,12 +3,16 @@ ion-header {
 
     ion-toolbar {
         --background: transparent;
+
         ion-title {
             font-family: "fivo-regular";
             text-transform: uppercase;
+            color: var(--ion-color-light);
         }
+
         ion-back-button {
-            color: var(--ion-color-green);
+            // color: var(--ion-color-green);
+            color: var(--ion-color-light);
         }
     }
 }
@@ -22,6 +26,7 @@ ion-content {
         padding: 10px 16px 10px 16px;
         flex: 1 1;
         justify-content: space-between;
+
         .product_div {
             width: 48%;
             border-radius: 5px;
@@ -29,6 +34,7 @@ ion-content {
             padding: 10px 7px;
             margin-bottom: 20px;
             position: relative;
+
             .img_div {
                 display: flex;
                 justify-content: center;
@@ -38,6 +44,7 @@ ion-content {
                     width: 80px;
                 }
             }
+
             .name {
                 font-size: 15px;
                 font-family: "fivo-regular";
@@ -45,6 +52,7 @@ ion-content {
                 color: var(--ion-color-white);
                 margin: 0;
             }
+
             .qunty {
                 font-size: 12px;
                 // color: var(--border-color);
@@ -52,16 +60,20 @@ ion-content {
                 font-family: "fivo-regular";
                 margin: 4px 0px;
             }
+
             .price {
                 font-size: 14px;
-                color: var(--green-color);
+                // color: var(--green-color);
+                color: var(--ion-color-light);
                 font-family: "fivo-regular";
                 margin: 0;
             }
+
             .btn_div {
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
+
                 .add_btn {
                     height: 15px;
                     width: 15px;
@@ -75,6 +87,7 @@ ion-content {
                         width: 9px;
                     }
                 }
+
                 .qty_p {
                     font-size: 14px;
                     // color: var(--border-color);
@@ -82,15 +95,18 @@ ion-content {
                     font-family: "fivo-regular";
                     margin: 0 5px;
                     padding-top: 2px;
+
                     span {
                         margin-left: 5px;
                     }
+
                     ion-icon {
                         // color: var(--ion-color-yellow);
                         color: var(--ion-color-white);
                         margin-right: 3px;
                     }
                 }
+                
                 .qty_div {
                     display: flex;
                     align-items: center;
