--- a/src/app/pages/store-detail/store-detail.page.html
+++ b/src/app/pages/store-detail/store-detail.page.html
@@ -7,7 +7,7 @@
 
                     <ion-buttons slot="end">
                         <ion-button (click)="cart()">
-                            <ion-icon src="../../../assets/icon-image/white_cart.svg"></ion-icon>
+                            <ion-icon src="./assets/icon-image/white_cart.svg"></ion-icon>
                         </ion-button>
                         <ion-back-button defaultHref="home" icon="ios-arrow-back" text=""></ion-back-button>
                     </ion-buttons>
@@ -53,7 +53,7 @@
             <div class="btn_div">
                 <div class="qty_div">
                     <ion-button class="add_btn trans-btn" (click)="remove(item)">
-                        <ion-icon src="../../../assets/icon-image/minus-sign.svg">
+                        <ion-icon src="./assets/icon-image/minus-sign.svg">
 
                         </ion-icon>
                     </ion-button>
@@ -62,7 +62,7 @@
 
                     </p>
                     <ion-button class="add_btn trans-btn" (click)="AddCart(item)">
-                        <ion-icon src="../../../assets/icon-image/plus-signs.svg">
+                        <ion-icon src="./assets/icon-image/plus-signs.svg">
 
                         </ion-icon>
                     </ion-button>
