--- a/src/app/pages/store-detail/store-detail.page.scss
+++ b/src/app/pages/store-detail/store-detail.page.scss
@@ -30,27 +30,32 @@ ion-content {
         right: 15px;
         top: 23px;
     }
+
     .vote {
         font-size: 10.5px;
         font-family: "Poppins-Regular";
         // color: var(--ion-color-darkgray);
         color: var(--ion-color-light);
         margin: 0px;
+
         span {
             margin-left: 5px;
         }
+
         ion-icon {
             // color: var(--ion-color-yellow);
             color: var(--ion-color-light);
             margin-right: 3px;
         }
     }
+
     .heade_div {
         // background-image: url("../../../assets/image/back_img.png");
         height: 300px;
         border-radius: 0px 0px 25px 25px;
         background-repeat: no-repeat;
         background-size: cover;
+
         .back_layer {
             width: 100%;
             height: 100%;
@@ -58,8 +63,10 @@ ion-content {
             border-radius: 0px 0px 20px 20px;
             padding-top: 70px;
         }
+
         .profile_div {
             text-align: center;
+
             .since_lbl {
                 font-size: 14px;
                 font-family: "fivo-regular";
@@ -67,10 +74,12 @@ ion-content {
                 margin-bottom: 10px;
                 color: var(--ion-color-white);
             }
+
             img {
                 height: 90px;
                 width: 90px;
             }
+
             .time {
                 font-size: 14px;
                 font-family: "fivo-regular";
@@ -78,6 +87,7 @@ ion-content {
                 margin-bottom: 3px;
                 color: var(--ion-color-white);
             }
+
             .policy_lbl {
                 font-size: 12px;
                 font-family: "fivo-regular";
@@ -87,6 +97,7 @@ ion-content {
             }
         }
     }
+
     .main_lbl {
         margin-top: 10px;
         font-size: 18px;
@@ -97,6 +108,7 @@ ion-content {
         display: flex;
         justify-content: space-between;
         align-items: center;
+
         .more_btn {
             font-size: 14px;
             text-transform: capitalize;
@@ -104,6 +116,7 @@ ion-content {
             height: 20px;
         }
     }
+
     .coupon_div {
         margin: 20px 16px 0px 16px;
         height: 103px;
@@ -113,6 +126,7 @@ ion-content {
         display: flex;
         align-items: center;
         justify-content: center;
+
         .sticker_div {
             height: 62px;
             width: 62px;
@@ -127,9 +141,11 @@ ion-content {
                 width: 34px;
             }
         }
+
         .info_div {
             padding-left: 25px;
             width: 73%;
+
             .info_lbl {
                 font-size: 18px;
                 font-family: "fivo-medium";
@@ -137,6 +153,7 @@ ion-content {
                 color: var(--ion-color-white);
                 margin: 0;
             }
+
             .discount {
                 font-size: 14px;
                 font-family: "fivo-regular";
@@ -146,16 +163,19 @@ ion-content {
             }
         }
     }
+
     .trending_div {
         display: -webkit-box;
         overflow-x: auto;
         padding: 10px 0px 10px 16px;
+
         .product_div {
             width: 145px;
             border-radius: 5px;
             box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
             padding: 10px 7px;
             margin-right: 16px;
+
             .img_div {
                 display: flex;
                 justify-content: center;
@@ -165,6 +185,7 @@ ion-content {
                     width: 80px;
                 }
             }
+
             .name {
                 font-size: 15px;
                 font-family: "fivo-regular";
@@ -172,6 +193,7 @@ ion-content {
                 color: var(--ion-color-white);
                 margin: 0;
             }
+
             .qunty {
                 font-size: 12px;
                 // color: var(--border-color);
@@ -179,17 +201,21 @@ ion-content {
                 font-family: "fivo-regular";
                 margin: 4px 0px;
             }
+
             .price {
                 font-size: 14px;
-                color: var(--green-color);
+                // color: var(--green-color);
+                color: var(--ion-color-light);
                 font-family: "fivo-regular";
                 margin: 0;
             }
         }
+
         .btn_div {
             display: flex;
             align-items: center;
             justify-content: space-between;
+
             .add_btn {
                 height: 15px;
                 width: 15px;
@@ -203,27 +229,33 @@ ion-content {
                     width: 9px;
                 }
             }
+
             .qty_p {
                 font-size: 14px;
-                color: var(--border-color);
+                // color: var(--border-color);
+                color: var(--ion-color-light);
                 font-family: "fivo-regular";
                 margin: 0 5px;
                 padding-top: 2px;
             }
+
             .qty_div {
                 display: flex;
                 align-items: center;
             }
         }
     }
+
     .trending_div::-webkit-scrollbar,
     .categories_div::-webkit-scrollbar {
         display: none;
     }
+
     .categories_div {
         display: -webkit-box;
         overflow-x: auto;
         padding: 10px 0px 10px 16px;
+
         .product_div {
             width: 145px;
             border-radius: 5px;
@@ -231,6 +263,7 @@ ion-content {
             padding: 0px 0px 10px 0px;
             text-align: center;
             margin-right: 16px;
+
             .name {
                 margin-top: 5px;
                 font-size: 18px;
@@ -239,6 +272,7 @@ ion-content {
                 font-family: "fivo-regular";
                 margin-bottom: 2px;
             }
+
             img {
                 height: 123px;
                 width: 100%;
